feat(ux): add loading and error states in popup

--- a/apps/extension/popup.html
+++ b/apps/extension/popup.html
@@ -13,6 +13,7 @@
 
       <button id="organizeBtn" type="button">Organize Now</button>
       <p id="statusText" class="status">Ready.</p>
+      <p id="hintText" class="hint" hidden></p>
       <p id="summaryText" class="summary">No runs yet.</p>
 
       <button id="openOptionsBtn" class="link-btn" type="button">Settings</button>
