feat(core): add preview/revert contracts and optional site access

--- a/apps/extension/options.html
+++ b/apps/extension/options.html
@@ -22,6 +22,15 @@
         Include full URL in AI context
       </label>
 
+      <label class="checkbox">
+        <input
+          id="includeScrapedContext"
+          name="includeScrapedContext"
+          type="checkbox"
+        />
+        Include lightweight page context (description/headings/snippet)
+      </label>
+
       <button id="saveBtn" type="button">Save Settings</button>
       <p id="statusText" class="status">Ready.</p>
     </main>
