--- a/apps/extension/popup.html
+++ b/apps/extension/popup.html
@@ -11,10 +11,29 @@
       <h1>Mindweave</h1>
       <p>Warm tab clarity in one click.</p>
 
-      <button id="organizeBtn" type="button">Organize Now</button>
+      <button id="organizeBtn" type="button">Generate Preview</button>
       <p id="statusText" class="status">Ready.</p>
       <p id="hintText" class="hint" hidden></p>
       <p id="summaryText" class="summary">No runs yet.</p>
+
+      <section id="previewSection" class="preview" hidden>
+        <div class="preview-header">
+          <h2>Preview</h2>
+          <p id="previewMetaText" class="preview-meta"></p>
+        </div>
+        <div id="previewGroups" class="preview-groups"></div>
+        <div class="preview-actions">
+          <button id="applyPreviewBtn" type="button">Apply Groups</button>
+          <button id="regeneratePreviewBtn" type="button">Regenerate</button>
+          <button id="cancelPreviewBtn" type="button">Cancel</button>
+        </div>
+      </section>
+
+      <section class="revert">
+        <h2>Revert</h2>
+        <select id="revertSelect"></select>
+        <button id="revertBtn" type="button">Revert Selected</button>
+      </section>
 
       <button id="openOptionsBtn" class="link-btn" type="button">Settings</button>
     </main>
