feat(ai): add primary-fallback model cascade and clearer ai errors

--- a/apps/extension/options.html
+++ b/apps/extension/options.html
@@ -17,6 +17,9 @@
       <label for="model">Model</label>
       <input id="model" name="model" type="text" />
 
+      <label for="fallbackModel">Fallback model</label>
+      <input id="fallbackModel" name="fallbackModel" type="text" />
+
       <label class="checkbox">
         <input id="includeFullUrl" name="includeFullUrl" type="checkbox" />
         Include full URL in AI context
