--- a/apps/extension/popup.html
+++ b/apps/extension/popup.html
@@ -23,8 +23,7 @@
         </div>
         <div id="previewGroups" class="preview-groups"></div>
         <div id="excludedSection" class="excluded" hidden>
-          <h3>Excluded From Apply</h3>
-          <p class="preview-meta">Dropped here tabs stay unchanged when applying.</p>
+          <h3>Unassigned</h3>
           <ul id="excludedTabs" class="tab-list dropzone" data-drop-target="excluded"></ul>
         </div>
         <div class="preview-actions">
@@ -32,7 +31,7 @@
           <button id="regeneratePreviewBtn" type="button">Regenerate</button>
           <button id="cancelPreviewBtn" type="button">Cancel</button>
         </div>
-        <button id="clearGroupsBtn" type="button">Delete All Preview Groups</button>
+        <button id="clearGroupsBtn" type="button">Unassign All Groups</button>
       </section>
 
       <section class="revert">
