feat(archive): archive-and-close flows with 10s undo token

--- a/apps/extension/popup.html
+++ b/apps/extension/popup.html
@@ -14,6 +14,10 @@
       <button id="organizeBtn" type="button">Generate Preview</button>
       <p id="statusText" class="status">Ready.</p>
       <p id="hintText" class="hint" hidden></p>
+      <div id="undoToast" class="undo-toast" hidden>
+        <span id="undoText"></span>
+        <button id="undoBtn" type="button">Undo</button>
+      </div>
       <p id="summaryText" class="summary">No runs yet.</p>
 
       <section id="previewSection" class="preview" hidden>
